--- a/api/package.json
+++ b/api/package.json
@@ -20,6 +20,8 @@
     "pg": "^8.16.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11"
+    "@prisma/client": "^6.19.2",
+    "nodemon": "^3.1.11",
+    "prisma": "^6.19.2"
   }
 }
